Add Notificación: Confirmar reserva por correo